# zccl

./: .clang-format  .gitignore  CNAME  COPYRIGHT  Makefile.am  Makefile.in  README.md  autogen.sh  config.h  config.status  configure  configure.ac  libtool
ZCCL/: Makefile.am  broadcast.h  compression_allreduce.c  ring2_ho_multithreads.h  ring2_multithreads.h  scatter.h  testfloat_homocompress_fastmode1_arg.c
ZCCL/include/: ZCCL.h  ZCCL_BytesToolkit.h  ZCCL_appendix.h  ZCCL_broadcast.h  ZCCL_dataCompression.h  ZCCL_float.h  ZCCL_helper.h  ZCCL_libs.h  ZCCL_multidim.h  ZCCL_ring.h  ZCCL_ring_ho.h  ZCCL_scatter.h  ZCCL_utility.h  ZCCL_utils.h  ZCCLd_float.h  libs.h  utils.h
ZCCL/src/: ZCCL.c  ZCCL_BytesToolkit.c  ZCCL_TypeManager.c  ZCCL_appendix.c  ZCCL_broadcast.c  ZCCL_dataCompression.c  ZCCL_float.c  ZCCL_helper.c  ZCCL_libs.c  ZCCL_multidim.c  ZCCL_ring.c  ZCCL_ring_ho.c  ZCCL_scatter.c  ZCCL_utils.c  ZCCLd_float.c
examples/: Makefile.am  compression_allreduce.c  test_allgv_3d.c  testfloat_homocompress_fastmode1_arg.c
hZ-dynamic/: Makefile.am  Makefile.in
hZ-dynamic/include/: ZCCL.h  ZCCL_TypeManager.h  ZCCL_defines.h  ZCCL_float.h  ZCCL_rw.h  ZCCLd_float.h  hZCCL.h  hZCCL_BytesToolkit.h  hZCCL_TypeManager.h  hZCCL_dataCompression.h  hZCCL_defines.h  hZCCL_float.h  hZCCL_helper.h  hZCCL_rw.h  hZCCL_utility.h  hZCCLd_float.h
hZ-dynamic/src/: ZCCL.c  ZCCL_BytesToolkit.c  ZCCL_TypeManager.c  ZCCL_dataCompression.c  ZCCL_float.c  ZCCL_helper.c  ZCCL_rw.c  ZCCL_utility.c  ZCCLd_float.c  hZCCL.c  hZCCL_BytesToolkit.c  hZCCL_TypeManager.c  hZCCL_dataCompression.c  hZCCL_float.c  hZCCL_helper.c  hZCCL_rw.c  hZCCL_utility.c  hZCCLd_float.c
hZCCL/: Makefile.am  Makefile.in  compression_allreduce.c  ring2_ho_multithreads.h  ring2_multithreads.h  testfloat_homocompress_fastmode1_arg.c
hZCCL/include/: libs.h  utils.h
jobs/: different_nodes.sh  different_sizes.sh  evaluate_compressor_NYX.sh
maint/: code-cleanup.sh  pre-commit
